<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.kindergarten.readiness.MainActivity">

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="34sp"

        />

    <TextView
        android:id="@+id/about_us_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_details"
        android:textSize="20sp"
        />


    <TextView
        android:id="@+id/how_to_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_use"
        android:textSize="34sp"

        />

    <TextView
        android:id="@+id/how_to_use_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_use_detail"
        android:textSize="20sp"

        />
    <TextView
        android:id="@+id/start_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"

        />

    <Button
        android:id="@+id/start_quiz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz_button"
        android:textSize="15sp"
        android:gravity="center"

        />

</LinearLayout>