<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcdbbd"
    tools:context="com.example.android.kindergarten.readiness.QuizActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fcdbbd"
        android:orientation="vertical">


        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz_name"
            android:textSize="34sp"
            android:textStyle="bold"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:padding="4dp"
            android:text=""
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="monospace"

            />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <RadioButton
                android:id="@+id/choice1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/option1"
                android:textStyle="bold"
                android:textSize="18sp"
                />


            <RadioButton
                android:id="@+id/choice2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/option2"
                android:textStyle="bold"
                android:textSize="18sp"
               />

            <RadioButton
                android:id="@+id/choice3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/option3"
                android:textStyle="bold"
                android:textSize="18sp"
               />

            <RadioButton
                android:id="@+id/choice4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/option4"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >

            <Button
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#45ba02"
                android:padding="8dp"
                android:text="@string/home"
                android:onClick="homeScreen"/>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#45ba02"
                android:onClick="nextQuestion"
                android:padding="8dp"
                android:text="@string/next" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>