<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcdbbd"
    tools:context="com.example.android.kindergarten.readiness.MainActivity">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fcdbbd"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/thumbsup3"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/kindergarden_main_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="34sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"

        />


    <Button
        android:id="@+id/search_kindergarten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchKindergarten"
        android:textSize="20sp"
        android:backgroundTint="#45ba02"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/start_quiz_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz_again"
        android:textSize="15sp"
        android:backgroundTint="#45ba02"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:onClick="startEvaluation"
        />




</LinearLayout>
</ScrollView>